--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="C:/Trabalhos/Faculdade/5º periodo/Tecnicas avançadas de programação/Exercício/Código/ProjetoTAP01/dep/jgoodies-common-1.8.0.jar"/>
 	<classpathentry kind="lib" path="C:/Trabalhos/Faculdade/5º periodo/Tecnicas avançadas de programação/Exercício/Código/ProjetoTAP01/dep/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Trabalhos/Faculdade/5º periodo/Tecnicas avançadas de programação/Exercício/Código/ProjetoTAP01/dep/miglayout-3.7.3.1-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
