--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Trabalhos/Faculdade/5º periodo/Tecnicas avançadas de programação/Exercício/Código/ProjetoTAP01/dep/jgoodies-common-1.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/Trabalhos/Faculdade/5º periodo/Tecnicas avançadas de programação/Exercício/Código/ProjetoTAP01/dep/jgoodies-forms-1.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/Trabalhos/Faculdade/5º periodo/Tecnicas avançadas de programação/Exercício/Código/ProjetoTAP01/dep/miglayout-3.7.3.1-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="C:/Users/Marques/Documents/GitHub/ProjetoTAP01/dep/jgoodies-common-1.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Marques/Documents/GitHub/ProjetoTAP01/dep/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Marques/Documents/GitHub/ProjetoTAP01/dep/miglayout-3.7.3.1-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="C:/Users/Marques/Documents/GitHub/ProjetoTAP01/dep/miglayout-swing-3.7.3.1-0000.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
